# YAC

./: .clang-format  .clang-tidy  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  settings.example.toml  vcpkg.json
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architectural-review.md  feature-gap-vs-opencode.md  incomplete-features.md  mcp.md  opencode-aesthetic-plan.md  tool-gap-analysis.md  yac-demo.tape  yac-screenshot.tape
scripts/: verify-vcpkg-baseline.sh
src/: main.cpp
src/app/: bootstrap.cpp  bootstrap.hpp  chat_event_bridge.cpp  chat_event_bridge.hpp  headless.cpp  headless.hpp  mcp_command_handlers.cpp  mcp_command_handlers.hpp  model_context_windows.cpp  model_context_windows.hpp  model_discovery.cpp  model_discovery.hpp  prompt_slash_commands.cpp  prompt_slash_commands.hpp  streaming_coalescer.cpp  streaming_coalescer.hpp
src/chat/: CMakeLists.txt  agent_mode.cpp  agent_mode.hpp  chat_history_store.cpp  chat_history_store.hpp  chat_service.cpp  chat_service.hpp  chat_service_compactor.cpp  chat_service_compactor.hpp  chat_service_history.cpp  chat_service_history.hpp  chat_service_mcp.cpp  chat_service_mcp.hpp  chat_service_prompt_processor.cpp  chat_service_prompt_processor.hpp  chat_service_request_builder.cpp  chat_service_request_builder.hpp  chat_service_tool_approval.cpp  chat_service_tool_approval.hpp  config.cpp  config.hpp  config_loader.cpp  config_loader.hpp  config_paths.cpp  config_paths.hpp  env_file.cpp  env_file.hpp  model_info.hpp  prompt_library.cpp  prompt_library.hpp  settings_toml.cpp  settings_toml.hpp  settings_toml_template.hpp  sub_agent_event_adapter.cpp  sub_agent_event_adapter.hpp  sub_agent_manager.cpp  sub_agent_manager.hpp  tool_approval_manager.cpp  tool_approval_manager.hpp  tool_call_argument_parser.cpp  (+2 more)
src/cli/: mcp_admin_command.cpp  mcp_admin_command.hpp  mcp_cli_dispatch.cpp  mcp_cli_dispatch.hpp
src/core_types/: agent_mode.hpp  chat_ids.hpp  file_mention.hpp  mcp_manager_interface.hpp  mcp_resource_types.hpp  mcp_tool_catalog_snapshot.hpp  tool_call_types.hpp  typed_ids.hpp
src/mcp/: debug_log.cpp  debug_log.hpp  file_token_store.cpp  file_token_store.hpp  json_helpers.hpp  keychain_token_store.cpp  keychain_token_store.hpp  mcp_manager.cpp  mcp_manager.hpp  mcp_server_config.cpp  mcp_server_config.hpp  mcp_server_session.cpp  mcp_server_session.hpp  mcp_transport.hpp  protocol_constants.hpp  protocol_messages.cpp  protocol_messages.hpp  secret_redaction.cpp  secret_redaction.hpp  server_state.hpp  sse_parser.cpp  sse_parser.hpp  stdio_mcp_transport.cpp  stdio_mcp_transport.hpp  streamable_http_mcp_transport.cpp  streamable_http_mcp_transport.hpp  token_store.hpp  tool_naming.cpp  tool_naming.hpp
src/presentation/: chat_event_sink.hpp  chat_session.cpp  chat_session.hpp  chat_ui.cpp  chat_ui.hpp  chat_ui_actions.hpp  chat_ui_clock_ticker.cpp  chat_ui_clock_ticker.hpp  chat_ui_components.cpp  chat_ui_composer_render.cpp  chat_ui_composer_render.hpp  chat_ui_dynamic_message_stack.cpp  chat_ui_dynamic_message_stack.hpp  chat_ui_input_controller.cpp  chat_ui_input_controller.hpp  chat_ui_notice_format.cpp  chat_ui_notice_format.hpp  chat_ui_overlay_state.cpp  chat_ui_overlay_state.hpp  chat_ui_render_plan.cpp  chat_ui_render_plan.hpp  chat_ui_scroll_state.cpp  chat_ui_scroll_state.hpp  chat_ui_thinking_animation.cpp  chat_ui_thinking_animation.hpp  collapsible.cpp  collapsible.hpp  command_palette.cpp  command_palette.hpp  composer_state.cpp  composer_state.hpp  dialog.cpp  dialog.hpp  file_mention_inliner.cpp  file_mention_inliner.hpp  file_mention_menu.cpp  file_mention_menu.hpp  file_mention_pattern.cpp  file_mention_pattern.hpp  message.cpp  (+15 more)
src/provider/: bedrock_aws_api_guard.cpp  bedrock_aws_api_guard.hpp  bedrock_chat_protocol.cpp  bedrock_chat_protocol.hpp  bedrock_chat_provider.cpp  bedrock_chat_provider.hpp  bedrock_logger.cpp  bedrock_logger.hpp  language_model_provider.hpp  model_context_windows.cpp  model_context_windows.hpp  openai_chat_protocol.cpp  openai_chat_protocol.hpp  openai_chat_provider.cpp  openai_chat_provider.hpp  provider_registry.cpp  (+7 more)
tests/: CMakeLists.txt  echo_jsonrpc_server.cpp  fake_mcp_server.cpp  lambda_mock_provider.hpp  mock_bedrock_provider.cpp  mock_bedrock_provider.hpp  mock_mcp_manager.hpp  mock_mcp_transport.cpp  mock_mcp_transport.hpp  mock_oauth_server.cpp  mock_response_provider.cpp  mock_response_provider.hpp  test_agent_mode.cpp  test_agents_md_loading.cpp  test_approval_mcp.cpp  test_ask_user.cpp  test_auto_compact.cpp  test_bash_tool_executor.cpp  test_bedrock_chat_protocol.cpp  test_bedrock_history_coalescing.cpp  test_bedrock_mcp_interop.cpp  test_bedrock_tool_translator.cpp  test_bootstrap_mcp.cpp  test_chat_config_bedrock.cpp  test_chat_event_bridge.cpp  test_chat_event_bridge_mcp.cpp  test_chat_service.cpp  test_chat_service_approval.cpp  test_chat_service_history.cpp  test_chat_service_mcp.cpp  test_chat_service_prompt_processor_mcp.cpp  test_chat_service_streaming.cpp  test_chat_service_subagent.cpp  test_chat_session.cpp  test_chat_types_mcp.cpp  test_chat_ui.cpp  test_chat_ui_approval.cpp  test_chat_ui_dialog.cpp  test_chat_ui_input.cpp  test_chat_ui_palette.cpp  (+110 more)
tests/compile_failure/: cross_type_assignment_fails.cpp
tests/fixtures/: crashing_server.toml  mock_oauth.toml  one_stdio_server.toml  sample.toml  slow_server.toml  two_stdio_servers.toml
tests/integration/: README.md  test_bedrock_e2e.cpp  test_mcp_cold_start.cpp  test_mcp_crash.cpp  test_mcp_oauth_e2e.cpp  test_mcp_shutdown.cpp  test_mcp_warm_cancel.cpp
tests/integration/scripts/: oauth_e2e.jsonl  sample.jsonl  shutdown.jsonl  warm_cancel.jsonl
tests/integration/scripts/bedrock/: converse_cancel.jsonl  converse_metadata_usage.jsonl  converse_multi_tool.jsonl  converse_stop_reason_guardrail.jsonl  converse_stop_reason_max_tokens.jsonl  converse_text_only.jsonl  converse_throttle_inline.jsonl  converse_tool_use_single.jsonl  converse_validation_inline.jsonl
tests/util/: mock_chat_actions.hpp  wait_until.hpp
(+109 files in other folders)
